--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,4 @@
 # Colocando o valor aqui mesmo, para apenas copiar para o .env real do teste
 
 DATABASE_URL="postgresql://docker:docker@localhost:5432/autoflex"
+JWT_SECRET="87d#7d!_aO9"
