--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -6,6 +6,9 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
+    "target": "es5",
+    "lib": ["es5", "dom"],
+    "types": ["cypress", "node"],
     "paths": {
       "@/*": ["./src/*"]
     }
