--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,5 +3,6 @@
     "compilerOptions": {
         "noEmit": true,
         "allowImportingTsExtensions": true,
+        "types": ["node", "vitest/globals"]
     }
 }
