docs: make README and final adjustments

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,2 @@
-# Colocando o valor aqui mesmo, para apenas copiar para o .env real do teste
-
-DATABASE_URL="postgresql://docker:docker@localhost:5432/autoflex"
+DATABASE_URL="postgresql://docker:docker@autoflex-pg:5432/autoflex"
 JWT_SECRET="87d#7d!_aO9"
