--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -9,3 +9,12 @@ services:
       - POSTGRES_DB=autoflex
     volumes:
       - ./docker:/docker-entrypoint-initdb.d
+
+  autoflex-api:
+    build: .
+    ports:
+      - '3000:3000'
+    env_file:
+      - .env
+    depends_on:
+      - autoflex-pg
