--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --experimental-strip-types --watch --no-warnings src/http/server.ts",
-    "start": "node --experimental-strip-types --no-warnings src/http/server.ts",
+    "start": "drizzle-kit push && node --experimental-strip-types --no-warnings src/http/server.ts",
     "test": "vitest"
   },
   "keywords": [],
@@ -20,7 +20,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "drizzle-kit": "^0.31.8"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.4",
@@ -30,7 +31,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.0",
     "@types/pg": "^8.16.0",
-    "drizzle-kit": "^0.31.8",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
