--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:20.18-alpine AS build
 WORKDIR /app
+
+ARG VITE_API_URL
+
+ENV VITE_API_URL=$VITE_API_URL
+
 COPY package*.json ./
 RUN npm install
 COPY . .
@@ -8,9 +13,7 @@ RUN npm run build
 
 FROM nginx:stable-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-
 COPY public /usr/share/nginx/html/public
 
 EXPOSE 80
